--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-chapter.aux
-chapter.dvi
-chapter.fdb_latexmk
-chapter.fls
-chapter.log
-chapter.out
-chapter.pdf
-chapter.spl
+chapter.*
+!chapter.tex
